tests/snapshots/cli_stream__stream_collection_create_json.snap
---
source: tests/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "VideoLibraryId": 10001,
  "Guid": "col-guid-new1",
  "Name": "New Collection",
  "VideoCount": 0,
  "TotalSize": 0,
  "PreviewVideoIds": null,
  "PreviewImageUrls": []
}
