tests/snapshots/cli_stream__stream_collection_list_json.snap
---
source: tests/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Items": [
    {
      "VideoLibraryId": 10001,
      "Guid": "col-guid-0001",
      "Name": "Tutorials",
      "VideoCount": 5,
      "TotalSize": 524288000,
      "PreviewVideoIds": null,
      "PreviewImageUrls": []
    },
    {
      "VideoLibraryId": 10001,
      "Guid": "col-guid-0002",
      "Name": "Demos",
      "VideoCount": 2,
      "TotalSize": 104857600,
      "PreviewVideoIds": null,
      "PreviewImageUrls": []
    }
  ],
  "CurrentPage": 1,
  "TotalItems": 2,
  "HasMoreItems": false
}
