tests/snapshots/cli_stream__stream_library_get_json.snap
---
source: tests/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 10001,
  "Name": "main-library",
  "VideoCount": 42,
  "TrafficUsage": 1073741824,
  "StorageUsage": 536870912,
  "DateCreated": "2024-01-01T00:00:00Z",
  "HasWatermark": false,
  "PullZoneId": 5001,
  "StorageZoneId": 7001,
  "EnabledResolutions": "240p,360p,480p,720p,1080p",
  "ReplicationRegions": [],
  "AllowDirectPlay": true,
  "EnableMP4Fallback": false
}
