tests/snapshots/cli_stream__stream_video_caption_add_json.snap
---
source: tests/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Success": true,
  "Message": "OK",
  "StatusCode": 200
}
